01.Compute/01.VM/ExportedTemplate-rg-az204-vm/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_vm_win_demo_sn_name": {
            "defaultValue": "vm-win-demo-sn",
            "type": "String"
        },
        "virtualNetworks_vm_win_demo_snVNET_name": {
            "defaultValue": "vm-win-demo-snVNET",
            "type": "String"
        },
        "networkInterfaces_vm_win_demo_snVMNic_name": {
            "defaultValue": "vm-win-demo-snVMNic",
            "type": "String"
        },
        "networkSecurityGroups_vm_win_demo_snNSG_name": {
            "defaultValue": "vm-win-demo-snNSG",
            "type": "String"
        },
        "publicIPAddresses_vm_win_demo_snPublicIP_name": {
            "defaultValue": "vm-win-demo-snPublicIP",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-04-01",
            "name": "[parameters('networkSecurityGroups_vm_win_demo_snNSG_name')]",
            "location": "australiaeast",
            "properties": {
                "securityRules": [
                    {
                        "name": "rdp",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_vm_win_demo_snNSG_name'), 'rdp')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-04-01",
            "name": "[parameters('publicIPAddresses_vm_win_demo_snPublicIP_name')]",
            "location": "australiaeast",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "ipAddress": "20.28.202.9",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-04-01",
            "name": "[parameters('virtualNetworks_vm_win_demo_snVNET_name')]",
            "location": "australiaeast",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "vm-win-demo-snSubnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vm_win_demo_snVNET_name'), 'vm-win-demo-snSubnet')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "name": "[parameters('virtualMachines_vm_win_demo_sn_name')]",
            "location": "australiaeast",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm_win_demo_snVMNic_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_vm_win_demo_sn_name'), '_OsDisk_1_e51498c42799435d9d8635bb65d8f80f')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                      "managedDisk": {
                        "storageAccountType": "Premium_LRS"
                        // Removed (Error: Azure managed disk: osDisk.managedDisk.id is not allowed)
                        // Reference: https://github.com/Azure/azure-quickstart-templates/issues/3290
                        //"id": "[resourceId('Microsoft.Compute/disks/', concat(parameters('virtualMachines_vm_win_demo_sn_name'), '_OsDisk_1_e51498c42799435d9d8635bb65d8f80f'))]"
                      },
                        "deleteOption": "Detach",
                        "diskSizeGB": 127
                    },
                    "dataDisks": []
                },
              "osProfile": {
                "computerName": "[parameters('virtualMachines_vm_win_demo_sn_name')]",
                "adminUsername": "vmadmin",
                // Added (Error: Required parameter ‘adminPassword’ is missing (null).)
                // Reference: https://www.thebestcsharpprogrammerintheworld.com/2018/08/21/required-parameter-adminpassword-is-missing-null/
                "adminPassword": "TODO: Set in Azure Portal",
                "windowsConfiguration": {
                  "provisionVMAgent": true,
                  "enableAutomaticUpdates": true,
                  "patchSettings": {
                    "patchMode": "AutomaticByOS",
                    "assessmentMode": "ImageDefault"
                  },
                  "enableVMAgentPlatformUpdates": false
                },
                "secrets": [],
                "allowExtensionOperations": true
                // Removed (Error: The property 'requireGuestProvisionSignal' is not valid because the 'Microsoft.Compute/Agentless' feature is not enabled for this subscription)
                //"requireGuestProvisionSignal": true
              },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm_win_demo_snVMNic_name'))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2023-04-01",
            "name": "[concat(parameters('networkSecurityGroups_vm_win_demo_snNSG_name'), '/rdp')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_win_demo_snNSG_name'))]"
            ],
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2023-04-01",
            "name": "[concat(parameters('virtualNetworks_vm_win_demo_snVNET_name'), '/vm-win-demo-snSubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_vm_win_demo_snVNET_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.0.0/24",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-04-01",
            "name": "[parameters('networkInterfaces_vm_win_demo_snVMNic_name')]",
            "location": "australiaeast",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm_win_demo_snPublicIP_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vm_win_demo_snVNET_name'), 'vm-win-demo-snSubnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_win_demo_snNSG_name'))]"
            ],
            "kind": "Regular",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfigvm-win-demo-sn",
                        "id": "[concat(resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_vm_win_demo_snVMNic_name')), '/ipConfigurations/ipconfigvm-win-demo-sn')]",
                        "etag": "W/\"22d8f666-a8ff-410b-ba88-7a7ff968d077\"",
                        "type": "Microsoft.Network/networkInterfaces/ipConfigurations",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_vm_win_demo_snPublicIP_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_vm_win_demo_snVNET_name'), 'vm-win-demo-snSubnet')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "disableTcpStateTracking": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_vm_win_demo_snNSG_name'))]"
                },
                "nicType": "Standard",
                "auxiliaryMode": "None",
                "auxiliarySku": "None"
            }
        }
    ]
}
